Added controller and service for the filterable data points