@@ -23,19 +23,13 @@ public class ProductDiscountService {
 
         List<ProductDiscount> listPD = productDiscountRepository.loadAllProducts().stream()
                 .peek(d -> System.out.println("############Discount inainte de filtrare cu id si magazin: " + d.getProductId() + ", " + d.getStore() + ", " + d.getFromDate() + ", " + d.getToDate() + ", " + d.getDate() + ", " + d.getPercentageOfDiscount()))
-                //.peek(d -> System.out.println("Store discount: " + d.getStore() + ", Store product: " + p.getStore()))
                 .filter(d -> d.getProductId().equalsIgnoreCase(p.getProductId()))
                 .filter(d -> d.getStore().equalsIgnoreCase(p.getStore()))
                 .filter(d -> !date.isBefore(d.getFromDate()) && !date.isAfter(d.getToDate()))
                 .peek(d -> System.out.println("############Discount dupa filtrare cu id si magazin si perioada: " + d.getProductId() + ", " + d.getStore() + ", " + d.getFromDate() + ", " + d.getToDate() + ", " + d.getDate() + ", " + d.getPercentageOfDiscount()))
-                .collect(Collectors.toList());
+                .toList();
 
-
-                //primul gasit care indeplineste filtrele de mai sus incheie streamul curent si trece la urmatorul ProductDiscount prin callul findFirst()
-//                .findFirst()
-//                .ifPresent(d -> p.setPrice(p.getPrice() * (1 - d.getPercentageOfDiscount() / 100.0)));
-
-                //aplica discount pentru cel mai recent produs, si pare sa il ia pe primul in cazul in care sunt duplicate
+                /// aplica discount pentru cel mai recent produs, si il ia pe primul in cazul in care sunt duplicate
                 listPD.stream()
                         .max(Comparator.comparing(ProductDiscount::getDate))
                         .ifPresent(d -> p.setPrice(p.getPrice() * (1 - d.getPercentageOfDiscount() / 100.0)));
@@ -45,13 +39,13 @@ public class ProductDiscountService {
         List<ProductDiscount> listPD = productDiscountRepository.loadAllProducts().stream()
                 .filter(pd -> !pd.getFromDate().isAfter(date) && !pd.getToDate().isBefore(date))
                 .peek(pd -> System.out.println("Product after date filter: " + pd.getProductId() + ", " + pd.getFromDate() + ", " + pd.getToDate() + ", Date of file: " + pd.getDate()))
-                .collect(Collectors.toList());
+                .toList();
 
         List<ProductDiscount> listPDSorted = listPD.stream()
                 .sorted(Comparator.comparing(ProductDiscount::getPercentageOfDiscount).reversed())
                 .collect(Collectors.toList());
 
-        //return a message if not discounts are available; and discounts otherwise
+        /// return a message if not discounts are available; and discounts otherwise
         if (listPDSorted.isEmpty()) {
             return ResponseEntity
                     .status(HttpStatus.NOT_FOUND)
@@ -61,21 +55,21 @@ public class ProductDiscountService {
         }
     }
 
-    public ResponseEntity<?> getLastProductDiscounts(Double xHours) {
+    public ResponseEntity<?> getLastProductDiscounts(Double hours) {
         Date currentDate = new Date();
-        List<ProductDiscount> listPD = productDiscountRepository.loadLastProducts(currentDate, xHours);
+        List<ProductDiscount> listPD = productDiscountRepository.loadLastProducts(currentDate, hours);
         Map<String, List<ProductDiscount>> listPDMap = new HashMap<>();
 
-        //setting a map of Store and Products with discounts before returning to the user
+        /// setting a map of Store and Products with discounts before returning to the user
         listPD.forEach(pd -> {
                     listPDMap.computeIfAbsent(pd.getStore(), k -> new ArrayList<>()).add(pd);
                 });
 
-        //return a message if no discounts are available; and discounts otherwise
+        /// return a message if no discounts are available; and discounts otherwise
         if (listPD.isEmpty()) {
             return ResponseEntity
                     .status(HttpStatus.NOT_FOUND)
-                    .body(Map.of("error", "No discounts were found on the last " + xHours + " hours."));
+                    .body(Map.of("error", "No discounts were found on the last " + hours + " hours."));
         } else {
             return ResponseEntity.ok().body(listPDMap);
         }
